Bug 304987 - Compiling kde-base/systemsettings-4.8.5 fails with parallel build: fatal error: ui_outputconfigbase.h: No such file or directory
Summary: Compiling kde-base/systemsettings-4.8.5 fails with parallel build: fatal erro...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.5
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL: https://bugs.gentoo.org/show_bug.cgi?...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-11 18:02 UTC by Wonko
Modified: 2012-08-21 19:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wonko 2012-08-11 18:02:25 UTC
Does not build with MAKEOPTS="--jobs --load 5", but compiles fine with -j1. 
This happens a lot for me, and usually is not reproducable with a fixed number of jobs.

Reproducible: Didn't try

Steps to Reproduce:
See the URL above for my report on bugs.gentoo.org.
Comment 1 Christoph Feck 2012-08-13 14:46:17 UTC
Git commit 46b9acb42eed48f0fd3b9d2391dc8a217003cafc by Christoph Feck.
Committed on 13/08/2012 at 16:41.
Pushed by cfeck into branch 'master'.

Use forward declaration

Instead of including a file from another target, which might
not have been generated yet.

M  +3    -1    kcontrol/randr/randrconfig.h

http://commits.kde.org/kde-workspace/46b9acb42eed48f0fd3b9d2391dc8a217003cafc
Comment 2 stupor_scurvy343 2012-08-14 14:04:49 UTC
ACK to backport this to KDE/4.9?
Comment 3 stupor_scurvy343 2012-08-16 12:35:29 UTC
(In reply to comment #2)
> ACK to backport this to KDE/4.9?
CCing comitter.
Comment 4 Christoph Feck 2012-08-21 19:13:02 UTC
Git commit 00578c3036e0a267cd50e63d3745264a533d1899 by Christoph Feck.
Committed on 13/08/2012 at 16:41.
Pushed by cfeck into branch 'KDE/4.9'.

Use forward declaration

Instead of including a file from another target, which might
not have been generated yet.
FIXED-IN: 4.9.1
(cherry picked from commit 46b9acb42eed48f0fd3b9d2391dc8a217003cafc)

M  +3    -1    kcontrol/randr/randrconfig.h

http://commits.kde.org/kde-workspace/00578c3036e0a267cd50e63d3745264a533d1899