Use forward declaration

Instead of including a file from another target, which might
not have been generated yet.

BUG: 304987